methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                          ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                    ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                              ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                        ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                  ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                            ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                   ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                             ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                                       ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                                                 ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                                                           ^PictureMono2:6: error: not found: value avancer
def rangee(){faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                                                                     ^PictureMono2:8: error: not found: value reculer
def remiseEnPlace(){for (i<-1 to 21) {reculer()}
                                      ^PictureMono2:9: error: not found: value avancer
                   gauche();avancer();avancer();avancer();avancer();avancer();avancer();avancer();droite()}
                            ^PictureMono2:9: error: not found: value avancer
                   gauche();avancer();avancer();avancer();avancer();avancer();avancer();avancer();droite()}
                                      ^PictureMono2:9: error: not found: value avancer
                   gauche();avancer();avancer();avancer();avancer();avancer();avancer();avancer();droite()}
                                                ^PictureMono2:9: error: not found: value avancer
                   gauche();avancer();avancer();avancer();avancer();avancer();avancer();avancer();droite()}
                                                          ^PictureMono2:9: error: not found: value avancer
                   gauche();avancer();avancer();avancer();avancer();avancer();avancer();avancer();droite()}
                                                                    ^PictureMono2:9: error: not found: value avancer
                   gauche();avancer();avancer();avancer();avancer();avancer();avancer();avancer();droite()}
                                                                              ^PictureMono2:9: error: not found: value avancer
                   gauche();avancer();avancer();avancer();avancer();avancer();avancer();avancer();droite()}
                                                                                        ^